Add OIDC authentication configuration for Azure AD SSO

--- a/components/vault/kustomization.yaml
+++ b/components/vault/kustomization.yaml
@@ -16,11 +16,13 @@ resources:
   - vault-azure-config-secret.yaml
   - vault-config-job.yaml
   # Simple Vault deployment for Azure AD testing
+  - vault-simple-configmap.yaml
   - vault-simple-deployment.yaml
   - vault-simple-pvcs.yaml
   - vault-simple-service.yaml
   - vault-simple-route.yaml
   - vault-simple-config-job.yaml
+  - vault-oidc-config-job.yaml
 
 commonLabels:
   app.kubernetes.io/name: vault
