--- a/components/vault/vault-azure-config-secret.yaml
+++ b/components/vault/vault-azure-config-secret.yaml
@@ -8,10 +8,10 @@ metadata:
     app.kubernetes.io/part-of: platform
 type: Opaque
 stringData:
-  tenant-id: "REPLACE_WITH_AZURE_TENANT_ID"
-  service-principal-id: "REPLACE_WITH_AZURE_SERVICE_PRINCIPAL_ID"
-  # Note: You'll need to replace these values with your actual Azure AD configuration
-  # To get these values, you'll need to:
-  # 1. Create an Azure AD App Registration
-  # 2. Get the Tenant ID from Azure AD
-  # 3. Create a Service Principal and get its ID
+  tenant-id: "5d2d3f03-286e-4643-8f5b-10565608e5f8"
+  service-principal-id: "bd6342de-712e-4bc0-a954-9c97dfd5acf0"
+  client-id: "667e7b9c-e03e-4967-a9fd-953fef9cbce6"
+  client-secret: "REPLACE_WITH_AZURE_CLIENT_SECRET"
+  # Note: You need to get the client secret from your Azure AD app registration
+  # Go to Azure Portal → App registrations → aro-auth → Certificates & secrets
+  # Create a new client secret and replace the value above
