--- a/components/external-secrets-helm/kustomization.yaml
+++ b/components/external-secrets-helm/kustomization.yaml
@@ -11,38 +11,14 @@ helmCharts:
   version: 0.9.9
   releaseName: external-secrets
   namespace: external-secrets-system
-  # annotations:
-#     argocd.argoproj.io/sync-wave: "1"
   valuesInline:
     installCRDs: true
-    serviceAccount:
-      create: true
-      name: external-secrets-operator
-    podSecurityContext:
-      runAsNonRoot: true
-      runAsUser: 1000
-      runAsGroup: 1000
-      fsGroup: 1000
-    securityContext:
-      allowPrivilegeEscalation: false
-      capabilities:
-        drop: ["ALL"]
-      runAsNonRoot: true
-      runAsUser: 1000
-      runAsGroup: 1000
-    resources:
-      limits:
-        cpu: 500m
-        memory: 512Mi
-      requests:
-        cpu: 100m
-        memory: 128Mi
 
 # Additional resources
 resources:
 - namespace.yaml
 
-commonLabels:
+labels:
   app.kubernetes.io/name: external-secrets
   app.kubernetes.io/part-of: platform
   component: security
