--- a/components/external-secrets-helm/kustomization.yaml
+++ b/components/external-secrets-helm/kustomization.yaml
@@ -4,6 +4,14 @@ metadata:
   name: external-secrets
   namespace: external-secrets-system
 
+# Use Helm to deploy External Secrets Operator
+helmCharts:
+- name: external-secrets
+  repo: https://charts.external-secrets.io
+  version: 0.9.9
+  releaseName: external-secrets
+  namespace: external-secrets-system
+
 # Additional resources
 resources:
 - namespace.yaml
