Enable OADP deployment on OCP2 cluster with cross-cluster S3 access - Updated OADP operator to stable-1.3 - Made OADP configuration cluster-agnostic for reuse - Added OCP2-specific deployment guide and credential copy script - Enabled OADP components in OCP2 cluster values

--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -93,27 +93,27 @@ applications:
     destination:
       namespace: openshift-storage
 
-  # oadp-operator:
-  #   enabled: true
-  #   labels:
-  #     component: backup
-  #     phase: data
-  #   source:
-  #     path: components/oadp-operator
-  #   destination:
-  #     namespace: openshift-adp
-  #   syncOptions:
-  #   - CreateNamespace=true
+  oadp-operator:
+    enabled: true
+    labels:
+      component: backup
+      phase: data
+    source:
+      path: components/oadp-operator
+    destination:
+      namespace: openshift-adp
+    syncOptions:
+    - CreateNamespace=true
     
-  # oadp-configuration:
-  #   enabled: true
-  #   labels:
-  #     component: backup
-  #     phase: data
-  #   source:
-  #     path: components/oadp-configuration
-  #   destination:
-  #     namespace: openshift-adp
+  oadp-configuration:
+    enabled: true
+    labels:
+      component: backup
+      phase: data
+    source:
+      path: components/oadp-configuration
+    destination:
+      namespace: openshift-adp
       
   # oadp-scheduled-backups:
   #   enabled: true
