--- a/components/oadp-configuration/backup-storage-credentials.yaml
+++ b/components/oadp-configuration/backup-storage-credentials.yaml
@@ -1,10 +1,19 @@
 ---
-# WARNING: This is a template file with placeholder values
-# For security, this secret should be created using one of the following methods:
-# 1. GitHub Actions with sealed secrets (recommended for GitOps)
-# 2. Manual deployment with real values (not committed to Git)
-# 3. External Secrets Operator with Vault integration
+# IMPORTANT: This secret contains placeholder values and should NOT be applied directly
+# The real credentials must be copied from the ocp-host cluster where the S3 bucket is configured
+#
+# To get the real credentials:
+# 1. Login to ocp-host cluster
+# 2. Run: oc get secret cloud-credentials -n openshift-adp -o yaml
+# 3. Copy the secret to ocp-prd cluster
+# 4. Or use the script: ./kohler-dr/setup-s3-bucket-ocp-host.sh
+#
+# For GitOps deployment, use one of these methods:
+# 1. GitHub Actions with sealed secrets (recommended)
+# 2. External Secrets Operator with Vault integration
+# 3. Manual deployment with real values (not committed to Git)
 # 4. Helm values override during deployment
+
 apiVersion: v1
 kind: Secret
 metadata:
@@ -14,14 +23,21 @@ metadata:
     argocd.argoproj.io/sync-wave: "15"
     # Exclude from GitOps sync - deploy manually or via sealed secret
     argocd.argoproj.io/sync-options: "SkipDryRunOnMissingResource=true"
+    # Add note about manual credential setup
+    argocd.argoproj.io/description: "OADP cloud credentials - must be populated manually from ocp-host cluster"
 type: Opaque
 stringData:
   cloud: |
     [default]
-    # PLACEHOLDER: These values should NEVER contain real credentials in Git
-    # Real values should be provided via:
-    # - GitHub Secrets: OADP_AWS_ACCESS_KEY_ID, OADP_AWS_SECRET_ACCESS_KEY
-    # - Vault path: secret/openshift/{env}/oadp/aws_access_key_id and aws_secret_access_key
-    # - Manual oc command with real credentials
+    # CRITICAL: Replace these placeholder values with real credentials from ocp-host cluster
+    # 
+    # To get real credentials:
+    # oc login https://api.ocp-host.kohlerco.com:6443
+    # oc get secret cloud-credentials -n openshift-adp -o yaml
+    # 
+    # Then copy the secret to ocp-prd cluster:
+    # oc login https://api.ocp-prd.kohlerco.com:6443
+    # oc apply -f -  # (paste the secret YAML)
+    #
     aws_access_key_id=PLACEHOLDER_AWS_ACCESS_KEY_ID_REPLACE_ME
     aws_secret_access_key=PLACEHOLDER_AWS_SECRET_ACCESS_KEY_REPLACE_ME
