--- a/components/oadp-configuration/data-protection-application.yaml
+++ b/components/oadp-configuration/data-protection-application.yaml
@@ -2,7 +2,7 @@
 apiVersion: oadp.openshift.io/v1alpha1
 kind: DataProtectionApplication
 metadata:
-  name: ocp-prd-velero-config
+  name: cluster-velero-config
   namespace: openshift-adp
   annotations:
     argocd.argoproj.io/sync-wave: "15"
@@ -15,32 +15,28 @@ spec:
       - csi
       featureFlags:
       - EnableCSI
-    restic:
-      enable: true
-      supplementalGroups:
-      - 0
     nodeAgent:
       enable: true
       uploaderType: restic
   backupLocations:
   - velero:
       config:
-        region: minio
+        region: us-east-1
         s3ForcePathStyle: "true"
-        s3Url: https://s3-openshift-storage.apps.ocp-prd.kohlerco.com
-        insecureSkipTLSVerify: "false"
+        s3Url: https://s3-openshift-storage.apps.ocp-host.kohlerco.com
+        insecureSkipTLSVerify: "true"
       credential:
         key: cloud
         name: cloud-credentials
       default: true
       objectStorage:
-        bucket: velero-backup-b8287a8a-e806-4217-afc7-848ce1accf5f
-        prefix: ocp-prd
+        bucket: kohler-oadp-backups-ec378362-ab9d-433a-bd1a-87af6e630eba
+        prefix: ${CLUSTER_NAME:-cluster}
       provider: aws
-    name: ocp-prd-backup-location
+    name: cluster-backup-location
   snapshotLocations:
   - velero:
       config:
-        region: minio
+        region: us-east-1
       provider: aws
-    name: ocp-prd-snapshot-location
+    name: cluster-snapshot-location
