Fix OADP operator deployment for OCP2 cluster
- Update data protection application name to be cluster-specific (ocp2-velero-config)
- Add OCP2-specific cloud credentials template
- Update kustomization to include new credentials file
- Add setup script for OCP2 OADP verification
- Fix backup and snapshot location names for OCP2

--- a/components/oadp-configuration/data-protection-application.yaml
+++ b/components/oadp-configuration/data-protection-application.yaml
@@ -2,7 +2,7 @@
 apiVersion: oadp.openshift.io/v1alpha1
 kind: DataProtectionApplication
 metadata:
-  name: cluster-velero-config
+  name: ocp2-velero-config
   namespace: openshift-adp
   annotations:
     argocd.argoproj.io/sync-wave: "15"
@@ -34,10 +34,10 @@ spec:
         bucket: kohler-oadp-backups-ec378362-ab9d-433a-bd1a-87af6e630eba
         prefix: ocp2
       provider: aws
-    name: cluster-backup-location
+    name: ocp2-backup-location
   snapshotLocations:
   - velero:
       config:
         region: us-east-1
       provider: aws
-    name: cluster-snapshot-location
+    name: ocp2-snapshot-location
