--- a/components/oadp-operator/operator.yaml
+++ b/components/oadp-operator/operator.yaml
@@ -4,6 +4,8 @@ kind: OperatorGroup
 metadata:
   name: redhat-oadp-operator
   namespace: openshift-adp
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
 spec:
   targetNamespaces:
   - openshift-adp
@@ -15,9 +17,14 @@ metadata:
   namespace: openshift-adp
   annotations:
     argocd.argoproj.io/sync-wave: "5"
+    argocd.argoproj.io/sync-options: "SkipDryRunOnMissingResource=true"
 spec:
   channel: stable-1.3
   installPlanApproval: Automatic
   name: redhat-oadp-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
+  config:
+    env:
+    - name: OPERATOR_CONDITION_NAME
+      value: "oadp-operator.v1.3.0"
