Add Red Hat Quay Registry components for OCP2 cluster deployment
- Add quay-operator component with sync wave 5
- Add quay-configuration component with ODF S3 + Azure AD integration (sync wave 15)
- Add quay-mirror-config component for multi-cluster support (sync wave 25)
- Add ArgoCD applications for automated deployment
- Add OCP2-specific configuration values and documentation
- Include deployment script for easy setup

Components follow established GitOps patterns with proper sync wave ordering
and integrate with existing ODF storage and Azure AD authentication.

Note: Azure AD credentials are configured as environment variables to avoid
committing secrets to the repository.

--- a/bootstrap/infrastructure-applications.yaml
+++ b/bootstrap/infrastructure-applications.yaml
@@ -1,4 +1,39 @@
 ---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: mtc-configuration
+  namespace: openshift-gitops
+  annotations:
+    argocd.argoproj.io/sync-wave: "12"
+  labels:
+    component: migration
+    phase: platform
+spec:
+  project: cluster-config
+  source:
+    repoURL: https://github.com/rich-p-ai/kohler-openshift.git
+    targetRevision: HEAD
+    path: components/mtc
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: openshift-migration
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
+    - ServerSideApply=true
+  ignoreDifferences:
+    - group: migration.openshift.io
+      kind: MigCluster
+      jsonPointers:
+        - /status
+    - group: migration.openshift.io
+      kind: MigrationController
+      jsonPointers:
+        - /status
 # Phase 3: Infrastructure and Security Applications
 apiVersion: argoproj.io/v1alpha1
 kind: Application
