--- a/components/external-secrets-helm/vault-k8s-auth-secretstore.yaml
+++ b/components/external-secrets-helm/vault-k8s-auth-secretstore.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: SecretStore
 metadata:
-  name: vault-token-auth
+  name: vault-k8s-auth
   namespace: external-secrets-system
 spec:
   provider:
@@ -10,6 +10,8 @@ spec:
       path: "secret"
       version: "v2"
       auth:
-        tokenSecretRef:
-          name: "vault-eso-token"
-          key: "token"
+        kubernetes:
+          mountPath: "kubernetes"
+          role: "external-secrets-operator"
+          serviceAccountRef:
+            name: "external-secrets"
