--- a/components/quay-operator/namespace.yaml
+++ b/components/quay-operator/namespace.yaml
@@ -2,9 +2,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: openshift-adp
+  name: quay-enterprise
   labels:
     openshift.io/cluster-monitoring: "true"
-    argocd.argoproj.io/managed-by: openshift-gitops
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "5"
