--- a/components/quay-operator/operator.yaml
+++ b/components/quay-operator/operator.yaml
@@ -18,7 +18,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
-  channel: stable-3.12
+  channel: "3.4"
   installPlanApproval: Automatic
   name: quay-operator
   source: redhat-operators
