--- a/argocd-apps/quay-ocp2.yaml
+++ b/argocd-apps/quay-ocp2.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   project: default
   destination:
-    namespace: openshift-operators
+    namespace: quay-enterprise
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/rich-p-ai/kohler-openshift.git
