--- a/components/quay-operator/operator.yaml
+++ b/components/quay-operator/operator.yaml
@@ -14,7 +14,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: quay-operator
-  namespace: openshift-operators
+  namespace: quay-enterprise
   annotations:
     argocd.argoproj.io/sync-wave: "5"
 spec:
