Simplify Quay component configuration - set clair, route, and tls to managed: true for better compatibility

--- a/components/quay-configuration/quay-registry.yaml
+++ b/components/quay-configuration/quay-registry.yaml
@@ -10,7 +10,7 @@ spec:
   configBundleSecret: quay-config-bundle
   components:
     - kind: clair
-      managed: false  # Using custom configuration
+      managed: true
     - kind: postgres
       managed: false  # Using our HA PostgreSQL
     - kind: redis
@@ -18,9 +18,9 @@ spec:
     - kind: objectstorage
       managed: false   # Using ODF S3
     - kind: route
-      managed: false  # Using custom configuration
+      managed: true
     - kind: tls
-      managed: false  # Using custom configuration
+      managed: true
 ---
 apiVersion: v1
 kind: Secret
