--- a/components/quay-configuration/postgres-ha.yaml
+++ b/components/quay-configuration/postgres-ha.yaml
@@ -16,7 +16,14 @@ spec:
     metadata:
       labels:
         app: quay-postgres
-    spec:
+      # Node selector to target Quay infrastructure nodes
+      nodeSelector:
+        node-role.kubernetes.io/quay: ""
+      # Tolerations for infrastructure taints
+      tolerations:
+        - key: node-role.kubernetes.io/infra
+          operator: Exists
+          effect: NoSchedule
       containers:
         - name: postgres
           image: registry.redhat.io/rhel8/postgresql-13:latest
