Add NTP configuration for both worker and infra nodes using timehost.kohlerco.com

--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -48,6 +48,13 @@ default:
 # Critical Infrastructure Applications
 applications:
   # Phase 1: Core Infrastructure (Sync Wave 1-10)
+  node-configuration:
+    enabled: true
+    labels:
+      component: infrastructure
+      phase: core
+    source:
+      path: clusters/ocp2/node-configuration
    
   # network-configuration:
   #   enabled: true
