Fix ODF storage cluster tolerations for OCP2
- Add infra node toleration to storage cluster placement
- Add infra node toleration to storage device sets placement
- Change resource profile from lean to balanced
- Resolve pod scheduling issues on infrastructure nodes

This fixes the issue where Ceph components were unable to schedule
on ODF infrastructure nodes due to missing tolerations for the
node-role.kubernetes.io/infra:NoSchedule taint.

--- a/components/odf-configuration/storage-cluster.yaml
+++ b/components/odf-configuration/storage-cluster.yaml
@@ -17,6 +17,16 @@ spec:
     kms: {}
   externalStorage: {}
   manageNodes: true
+  placement:
+    all:
+      tolerations:
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/infra
+        operator: Equal
+      - effect: NoSchedule
+        key: node.ocs.openshift.io/storage
+        operator: Equal
+        value: "true"
   managedResources:
     cephBlockPools:
       defaultStorageClass: true
@@ -54,7 +64,7 @@ spec:
       encryption: {}
     multiClusterService: {}
   nodeTopologies: {}
-  resourceProfile: lean
+  resourceProfile: balanced
   resources:
     mds:
       limits:
@@ -86,6 +96,9 @@ spec:
             - key: node-role.kubernetes.io/infra
               operator: Exists
       tolerations:
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/infra
+        operator: Equal
       - effect: NoSchedule
         key: node.ocs.openshift.io/storage
         operator: Equal
