ODF Emergency Recovery: Fix Ceph monitor quorum failure caused by resource profile change from balanced to lean

--- a/components/odf-configuration/kustomization.yaml
+++ b/components/odf-configuration/kustomization.yaml
@@ -8,3 +8,4 @@ namespace: openshift-storage
 resources:
   - ./storage-system.yaml
   - ./storage-cluster.yaml
+  - ./storage-cluster-resource-profile-fix.yaml
