Fix StatefulSet schema errors - move containers to spec.template.spec
- Fixed quay-redis StatefulSet: moved containers from spec.template.metadata to spec.template.spec
- Fixed quay-postgres StatefulSet: moved containers from spec.template.metadata to spec.template.spec
- Resolves ArgoCD SyncFailed errors for both StatefulSets

--- a/components/quay-configuration/postgres-ha.yaml
+++ b/components/quay-configuration/postgres-ha.yaml
@@ -16,6 +16,7 @@ spec:
     metadata:
       labels:
         app: quay-postgres
+    spec:
       # Node selector to target Quay infrastructure nodes
       nodeSelector:
         node-role.kubernetes.io/quay: ""
