feat: Add NTP configuration and fix ODF infrastructure for ArgoCD deployment
- Add NTP MachineConfigs for master, worker, infra, ODF, and Quay nodes
- Configure chrony with timehost.kohlerco.com NTP server for all node types
- Create GitOps component for automated NTP deployment via ArgoCD
- Fix ODF infrastructure MachineSet variable substitution issues
- Replace variable placeholders with actual cluster values (ocp2-mbh44)
- Update autoscaler configuration with correct MachineSet references
- Add NTP configuration to ocp2 cluster values.yaml for ArgoCD deployment
- Set proper sync-wave annotations for infrastructure components
- Include NTP deployment and verification scripts
- Update ODF infrastructure configurations for proper GitOps integration

ArgoCD Integration:
- NTP configuration added to ocp2 cluster applications
- Sync-wave set to '1' for early infrastructure deployment
- Proper namespace targeting for machine-config-operator
- Components integrated with existing GitOps workflow

Fixes:
- MachineAutoscaler and MachineSet naming validation errors
- ODF infrastructure node configuration variable issues
- NTP synchronization across all cluster node types
- GitOps deployment integration for infrastructure components

--- a/clusters/ocp2/values.yaml
+++ b/clusters/ocp2/values.yaml
@@ -55,6 +55,18 @@ applications:
       phase: core
     source:
       path: clusters/ocp2/node-configuration
+
+  ntp-configuration:
+    enabled: true
+    labels:
+      component: infrastructure
+      phase: core
+    source:
+      path: components/ntp-configuration
+    destination:
+      namespace: openshift-machine-config-operator
+    annotations:
+      argocd.argoproj.io/sync-wave: "1"
    
   # network-configuration:
   #   enabled: true
