--- a/components/odf-infrastructure/odf-infra-machineset.yaml
+++ b/components/odf-infrastructure/odf-infra-machineset.yaml
@@ -2,13 +2,13 @@
 apiVersion: machine.openshift.io/v1beta1
 kind: MachineSet
 metadata:
-  name: $(MACHINESET_NAME)
+  name: ocp2-mbh44-odf-infra
   namespace: openshift-machine-api
   annotations:
     argocd.argoproj.io/sync-wave: "4"
   labels:
-    machine.openshift.io/cluster-api-cluster: $(CLUSTER_NAME)
-    machine.openshift.io/cluster-api-machineset: $(MACHINESET_NAME)
+    machine.openshift.io/cluster-api-cluster: ocp2-mbh44
+    machine.openshift.io/cluster-api-machineset: ocp2-mbh44-odf-infra
     machine.openshift.io/machine-type: infra
     machine.openshift.io/machine-role: infra
     app.kubernetes.io/name: odf-infrastructure
@@ -57,16 +57,16 @@ spec:
             creationTimestamp: null
           network:
             devices:
-            - networkName: $(STORAGE_NETWORK)
+            - networkName: VLAN225
           numCPUs: 8
           numCoresPerSocket: 2
           snapshot: ""
-          template: $(RHCOS_TEMPLATE)
+          template: ocp2-mbh44-rhcos-default_region-default_zone
           userDataSecret:
-            name: $(USER_DATA_SECRET)
+            name: worker-user-data
           workspace:
-            datacenter: $(VSPHERE_DATACENTER)
-            datastore: $(VSPHERE_DATASTORE)
-            folder: $(VSPHERE_FOLDER)
-            resourcePool: $(VSPHERE_RESOURCE_POOL)
-            server: $(VSPHERE_SERVER)
+            datacenter: VxRail-Datacenter
+            datastore: /VxRail-Datacenter/datastore/VxRail-Virtual-SAN-Datastore-3424f606-f285-4436-9c7e-f1497032666a
+            folder: /VxRail-Datacenter/vm/openshiftocp1/
+            resourcePool: /VxRail-Datacenter/host/VXRail-LinuxProd/Resources
+            server: uswivc02.kohlerco.com
