feat: Add rook-ceph-tools deployment for Ceph cluster diagnostics
- Add rook-ceph-tools component with deployment, RBAC, and configuration
- Deploy tools container for Ceph cluster monitoring and troubleshoting
- Include verification script for deployment validation
- Configure ArgoCD sync wave 15 to deploy after core ODF components
- Add to OCP2 and PRD cluster configurations
- Provide comprehensive documentation and usage instructions

--- a/clusters/prd/values.yaml
+++ b/clusters/prd/values.yaml
@@ -101,6 +101,18 @@ applications:
     destination:
       namespace: openshift-storage
 
+  rook-ceph-tools:
+    enabled: true
+    labels:
+      component: storage
+      phase: data
+    source:
+      path: components/rook-ceph-tools
+    destination:
+      namespace: openshift-storage
+    annotations:
+      argocd.argoproj.io/sync-wave: "15"
+
   oadp-operator:
     enabled: true
     labels:
